# airboltic-data-model

./: README.md  pyproject.toml
dbt/: Makefile  dbt_project.yml  profiles.yml
dbt/macros/overrides/: get_custom_schema.sql
dbt/macros/raw_data_vault/: build_hub.sql  build_link.sql  build_sat.sql
dbt/macros/utils/: concat_and_hash.sql  incremental_filter.sql
dbt/models/business_layer/metrics/: metrics__customer.sql  metrics__monthly_report.md  metrics__monthly_report.sql  metrics__trips.sql  schema.yml
dbt/models/landing/: landing__aeroplane_models.sql  landing__aeroplanes.sql  landing__customer_groups.sql  landing__customers.sql  landing__orders.sql  landing__trips.sql
dbt/models/raw_data_vault/hubs/: hub__aeroplanes.sql  hub__customers.sql  hub__orders.md  hub__orders.sql  hub__trips.sql  schema.yml
dbt/models/raw_data_vault/links/: link__orders__customers__trips.sql  link__trips__aeroplanes.sql
dbt/models/raw_data_vault/references/: ref__aeroplane_models.sql  ref__customer_groups.sql
dbt/models/raw_data_vault/sats/: sat__aeroplanes__backend.sql  sat__customers__backend.sql  sat__orders__backend.sql  sat__trips__backend.sql
dbt/seeds/abstraction_to_s3/: customer_groups.csv  load_aeroplane_models.py
